# LatentSyncBatch

./: README.md  pyproject.toml
latentsync/models/: unet.py
latentsync/pipelines/: lipsync_pipeline.py
