[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentsync"
version = "0.0.2"
description = "Taming Stable Diffusion for Lip Sync!"
authors = [
    { name = "Bytedance"},
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
# urls = { Documentation = "arxiv.org/abs/2412.09262 }
# Main dependencies

dependencies = [
    "torchaudio>=2.0",
    "torch_complex",
    "typeguard<=2.13.3",
    "pytorch_lightning<=2.6.0",
    "torchcodec<=0.9.0",

    "torchvision==0.23.0",
    "triton",
    "diffusers>=0.33.1",
    "transformers>=4.52.3",
    "huggingface-hub<1.0",
    "imageio>=2.27.0",
    "decord>=0.6.0",
    "accelerate>=0.26.1",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "safetensors>=0.4.3",
    "opencv-python>=4.9.0.80",
    "mediapipe>=0.10.11",
    "av",
    "torch-fidelity>=0.3.0",
    "torchmetrics>=1.3.1",
    "python_speech_features>=0.6",
    "librosa>=0.10.1",
    "scenedetect>=0.6.1",
    "ffmpeg-python>=0.2.0",
    "lpips>=0.1.4",
    "face-alignment>=1.4.1",
    "ninja>=1.11.1.1",
    "pandas>=2.0.3",
    "numpy>=1.24.4,<2",
    "pydub>=0.25.1",
    "moviepy>=1.0.3",
    "hf-xet>=1.1.8",
    "kornia>=0.8.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.21.0",
    "DeepCache>=0.1.1",
    "ultralytics",
    "batch-face"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
outofsync = [
  "configs/*.yaml",
  "configs/*.json",
  "configs/unet/*.yaml",
  "latentsync/utils/*.png",
  "latentsync/whisper/whisper/assets/multilingual/*.json",
  "latentsync/whisper/whisper/assets/gpt2/*.json",
  "latentsync/whisper/whisper/assets/*.npz",
]


[project.optional-dependencies]
# Development packages, install via <<<PROJECT_NAME>>>[dev]
dev = [
]

[project.scripts]
# E.g., ns-download-data = "scripts.downloads.download_data:entrypoint"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]  # Keep the '*', otherwise submodules are not found
